Closed
Bug 81214
Opened 24 years ago
Closed 24 years ago
###!!! ASSERTION: HTTP cannot send practical requests without this much: 'mAppName && mAppVersion && mPlatform && mSecurity && mOscpu', file c:\Projects\mozilla\netwerk\protocol\http\src\nsHttpHandler.cpp, line 703
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla0.9.1
People
(Reporter: vikasb, Assigned: gagan)
Details
Attachments
(1 file)
Build : CVS Debug build from today morning (20010516)
1. In Edit->Preferences->Advanced->Proxies, enter a auto proxy URL.
2. Click Ok and close the browser.
3. Re-start the browser.
Expected Results:
Browser starts up sucessfully using the pac url for all proxy information.
Actual Results:
Browser shows the following on the console:
Type Manifest File: C:\Projects\mozilla\dist\WIN32_D.OBJ\bin\components\xpti.dat
nsNativeComponentLoader: autoregistering begins.
nsNativeComponentLoader: autoregistering succeeded
nNCL: registering deferred (0)
###!!! ASSERTION: HTTP cannot send practical requests without this much:
'mAppName && mAppVersion && mPlatform && mSecurity && mOscpu', file
c:\Projects\mozilla\netwerk\protocol\http\src\nsHttpHandler.cpp, line 703
###!!! Break: at file
c:\Projects\mozilla\netwerk\protocol\http\src\nsHttpHandler.cpp, line 703
Reporter | ||
Comment 1•24 years ago
|
||
On further debugging, the cause of the assertion is as follows:
On startup, mozilla needs to load
"chrome://navigator/locale/navigator.properties", but it is using the
http handler to load it instead, which fails as it cannot create the HTTP header
as not all members of the protocol handler have not been assigned.
This happens when it tries to create a channel for the chrome URI in
nsIOService::NewChannelFromURI (nsIOService.cpp). Since an autoproxy has been
defined the if statement on line 310 succeeds and it tries to use the http
handler to load the URI.
The code was added as a part of the http landing of darin on 5/11. Reassigning
to him.
Assignee: neeti → darin
Updated•24 years ago
|
Comment 2•24 years ago
|
||
dougt: can you help with this one? bounce back to me if not.
Assignee: darin → dougt
Status: ASSIGNED → NEW
Comment 4•24 years ago
|
||
if there is a bad user symtom lets keep this on the 0.9.1 radar.
if not lets move it to 0.9.2
Updated•24 years ago
|
Whiteboard: gagan is working on a patch
Comment 8•24 years ago
|
||
sr=darin
Comment 9•24 years ago
|
||
r=pavlov
Comment 11•24 years ago
|
||
a= asa@mozilla.org on behalf of drivers
Assignee | ||
Comment 12•24 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: r=Pavlov sr=darin a=?
You need to log in
before you can comment on or make changes to this bug.
Description
•