Fix for bug 81214. We were running the PAC routines even for non-relevant scheme URLs like chrome, file, etc. Added a check to only process proxy related ones. r=pavlov, sr=darin, a=asa